[tool.poetry]
name = "repl_python3_GitHub-User-Search"
version = "0.1.0"
description = ""
authors = ["JBloves27 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
wget = "^3.2"
git-api = "^1.7.1"
Flask = "^2.0.2"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
